--- a/sass/bootstrap/_alerts.scss
+++ b/sass/bootstrap/_alerts.scss
@@ -9,7 +9,7 @@
 .alert {
   padding: 8px 35px 8px 14px;
   margin-bottom: $baseLineHeight;
-  text-shadow: 0 1px 0 rgba(255,255,255,.5);
+  // text-shadow: 0 1px 0 rgba(0,0,0,.5);
   background-color: $warningBackground;
   border: 1px solid $warningBorder;
   @include border-radius($baseBorderRadius);
@@ -17,7 +17,7 @@
 .alert,
 .alert h4 {
   // Specified for the h4 to prevent conflicts of changing $headingsColor
-  color: $warningText;
+  color: $textColor; // $warningText;
 }
 .alert h4 {
   margin: 0;
@@ -38,7 +38,7 @@
 .alert-success {
   background-color: $successBackground;
   border-color: $successBorder;
-  color: $successText;
+  color: white; // $successText;
 }
 .alert-success h4 {
   color: $successText;
@@ -47,19 +47,19 @@
 .alert-error {
   background-color: $errorBackground;
   border-color: $errorBorder;
-  color: $errorText;
+  color: white; // $errorText;
 }
 .alert-danger h4,
 .alert-error h4 {
-  color: $errorText;
+  color: white; // $errorText;
 }
 .alert-info {
   background-color: $infoBackground;
   border-color: $infoBorder;
-  color: $infoText;
+  color: white; // $infoText;
 }
 .alert-info h4 {
-  color: $infoText;
+  color: white; // $infoText;
 }
 
 
