instruct user with email adres placeholder when remembering account info at login

--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -64,7 +64,7 @@
 		    class="" 
 		    type="text" 
 		    ng-model="remember.id"
-		    placeholder="{{ui.login.ph_username}}">
+		    placeholder="{{ui.login.emailAddress}}">
 
 		  <button class="btn btn-large btn-primary" type="submit">{{ui.login.resetPassword}}</button>
 		  <p><small><a ng-click="views.login=true; views.forgot=false">{{ui.login.returnLogin}}</a></small></p>
