compressed html and hide 'show less' btn if less then 4 in dashbaord

--- a/war/js/views/dashboard-pies.html
+++ b/war/js/views/dashboard-pies.html
@@ -7,7 +7,7 @@
           <ul>
             <li ng-repeat="group in popover.groups">
               <label>
-                <input type="checkbox" ng-model="popover.selection[group.uuid]"> {{group.name}}
+                <input type="checkbox" ng-model="popover.selection[group.uuid]">&nbsp;{{group.name}}
               </label>
             </li>
           </ul>
