--- a/war/js/views/login.html
+++ b/war/js/views/login.html
@@ -42,7 +42,8 @@
 		  <p><small><a ng-click="views.forgot=true; views.login=false">{{ui.login.forgot_password}}</a></small></p>
 		  <p>
 		  	<small>
-			  	<a ng-click="changeLanguage('en')">English</a> |  
+			  	<a ng-click="changeLanguage('en')">English</a>
+			  	&nbsp;|&nbsp;
 			  	<a ng-click="changeLanguage('nl')">Nederlands</a>
 		  	</small>
 		  </p>
