--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -49,11 +49,11 @@
                   <div class="body">
                     <h3>Huidige status</h3>
                     <hr>
-                    <h5>{{pie.state.start}}</h5> 
-                    <small class="muted"> van</small>
+                    <h5>{{pie.state.start}}</h5>&nbsp;
+                    <small class="muted">van</small>
                     <br>
-                    <h5>{{pie.state.end}}</h5> 
-                    <small class="muted"> tot</small>
+                    <h5>{{pie.state.end}}</h5>&nbsp;
+                    <small class="muted">tot</small>
                   </div>
                 </div>
               </div>
@@ -68,11 +68,11 @@
                     <hr>
                     <small class="muted">{{pie.weeks.current.start.date}} / {{pie.weeks.current.end.date}}</small>
                     <br>
-                    <h5>{{pie.weeks.current.ratios.more}}%</h5> 
-                    <small class="muted">more</small>, 
-                    <h5>{{pie.weeks.current.ratios.even}}%</h5> 
-                    <small class="muted">even</small>, 
-                    <h5>{{pie.weeks.current.ratios.less}}%</h5> 
+                    <h5>{{pie.weeks.current.ratios.more}}%</h5>&nbsp;
+                    <small class="muted">more</small>,&nbsp;
+                    <h5>{{pie.weeks.current.ratios.even}}%</h5>&nbsp;
+                    <small class="muted">even</small>,&nbsp;
+                    <h5>{{pie.weeks.current.ratios.less}}%</h5>&nbsp;
                     <small class="muted">less</small>
                   </div>
                 </div>
@@ -88,11 +88,11 @@
                     <hr>
                     <small class="muted">{{pie.weeks.next.start.date}} / {{pie.weeks.next.end.date}}</small>
                     <br>
-                    <h5>{{pie.weeks.next.ratios.more}}%</h5> 
-                    <small class="muted">more</small>, 
-                    <h5>{{pie.weeks.next.ratios.even}}%</h5> 
-                    <small class="muted">even</small>, 
-                    <h5>{{pie.weeks.next.ratios.less}}%</h5> 
+                    <h5>{{pie.weeks.next.ratios.more}}%</h5>&nbsp;
+                    <small class="muted">more</small>,&nbsp;
+                    <h5>{{pie.weeks.next.ratios.even}}%</h5>&nbsp;
+                    <small class="muted">even</small>,&nbsp;
+                    <h5>{{pie.weeks.next.ratios.less}}%</h5>&nbsp;
                     <small class="muted">less</small>
                   </div>
                 </div>
@@ -222,7 +222,7 @@
         </ul>
         <!-- end p2000 loop -->
         <hr class="lastline">
-        <p ng-show="alarms.list.length > 0">
+        <p ng-show="alarms.list.length > 4">
           <small>
             <a class="pull-right" ng-click="toggle(more.status)">{{more.text}}</a>
           </small>
