--- a/sass/app/_notifications.scss
+++ b/sass/app/_notifications.scss
@@ -15,9 +15,11 @@
   text-align: center;
 
   p {
+    padding-top: 65px;
+    text-align: center;
     color: #a19781;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
-    font-size: 18px;  
+    font-size: 18px; 
   }
 
   span.entypo {
