--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -315,7 +315,8 @@
         <div ng-show="views.slot.edit">
           <button type="button" 
                   ng-click="timelineOnRemove()" 
-                  class="btn btn-danger">{{ui.planboard.del}}</button>
+                  class="btn btn-danger"
+                  style="margin-right: 5px">{{ui.planboard.del}}</button>
           <button type="button" 
                   ng-click="timelineOnChange('true', original, slot)" 
                   class="btn btn-success">{{ui.planboard.change}}</button>
