--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -480,7 +480,7 @@
                       <div class="square"></div>
                       <input  type="checkbox" 
                               ng-click="alterLegenda(timeline.config.legenda)" 
-                              ng-model="timeline.config.legenda.groups.more">{{ui.planboard.morePeople}}
+                              ng-model="timeline.config.legenda.groups.more">{{ui.planboard.legendaLabels.morePeople}}
                     </label>
                   </li>
                   <li class="legenda-even">
@@ -488,7 +488,7 @@
                       <div class="square"></div>
                       <input  type="checkbox" 
                               ng-click="alterLegenda(timeline.config.legenda)" 
-                              ng-model="timeline.config.legenda.groups.even">{{ui.planboard.enoughPeople}}
+                              ng-model="timeline.config.legenda.groups.even">{{ui.planboard.legendaLabels.enoughPeople}}
                     </label>
                   </li>
                   <li class="legenda-less">
@@ -496,7 +496,7 @@
                       <div class="square"></div>
                       <input  type="checkbox" 
                               ng-click="alterLegenda(timeline.config.legenda)" 
-                              ng-model="timeline.config.legenda.groups.less">{{ui.planboard.lessPeople}}
+                              ng-model="timeline.config.legenda.groups.less">{{ui.planboard.legendaLabels.lessPeople}}
                     </label>
                   </li>
                 </ul>
@@ -607,13 +607,13 @@
               <strong>{{ui.planboard.groups}}</strong>
               <ul>
                 <li class="legenda-more">
-                  <label><div class="square"></div>{{ui.planboard.morePeople}}</label>
+                  <label><div class="square"></div>{{ui.planboard.legendaLabels.morePeople}}</label>
                 </li>
                 <li class="legenda-even">
-                  <label><div class="square"></div>{{ui.planboard.enoughPeople}}</label>
+                  <label><div class="square"></div>{{ui.planboard.legendaLabels.enoughPeople}}</label>
                 </li>
                 <li class="legenda-less">
-                  <label><div class="square"></div>{{ui.planboard.lessPeople}}</label>
+                  <label><div class="square"></div>{{ui.planboard.legendaLabels.lessPeople}}</label>
                 </li>
               </ul>
             </div>
