--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -1,10 +1,15 @@
 <div class="page-header">
   <h2>{{ui.message.messages}}</h2>
+
+
+  <!-- compose buttons -->
   <div class="btn-group pull-right">
     <button type="submit" 
             ng-click="composeMessage(); setViewTo('compose')" 
             class="btn btn-success {{(views.compose==true) && 'active'}}">{{ui.message.composeAMessage}}</button>
   </div>
+  <!-- end compose buttons -->
+
 </div>
 
 <!-- inboxes -->
@@ -16,6 +21,7 @@
 
     <!-- tabs -->
     <ul class="nav nav-tabs nav-tabs-app" style="margin-right: 0px;">
+
       <li class="{{(views.compose==true) && 'active'}}" ng-show="views.compose">
         <a href="#composeTab" 
             data-toggle="tab"
@@ -23,6 +29,7 @@
           <span class="entypo">&#9998;</span> {{ui.message.compose}}
         </a>
       </li>
+
       <li class="{{(views.message==true) && 'active'}}"  ng-show="views.message">
         <a href="#viewTab" 
             data-toggle="tab"
@@ -30,6 +37,7 @@
           <span class="entypo">&#128196;</span> {{ui.message.message}}
         </a>
       </li>
+
       <li class="{{(views.inbox==true) && 'active'}}">
         <a href="#inboxTab" 
             data-toggle="tab"
@@ -37,6 +45,15 @@
           <span class="entypo">&#128229;</span> {{ui.message.inbox}}
         </a>
       </li>
+
+      <li class="{{(views.notifications==true) && 'active'}}">
+        <a href="#notificationsTab" 
+            data-toggle="tab"
+            ng-click="resetViews(); setViewTo('notifications')">
+          <span class="entypo">&#128276;</span> Herinneringen
+        </a>
+      </li>
+
       <li class="{{(views.outbox==true ) && 'active'}}">
         <a href="#outboxTab"   
             data-toggle="tab"
@@ -44,6 +61,7 @@
           <span class="entypo">&#128228;</span> {{ui.message.outbox}}
         </a>
       </li>
+
       <li class="{{(views.trash==true ) && 'active'}}">
         <a href="#trashTab" 
             data-toggle="tab"
@@ -51,6 +69,7 @@
           <span class="entypo">&#9749;</span> {{ui.message.trash}}
         </a>
       </li>
+
     </ul>
     <!-- end tabs -->
 
@@ -59,6 +78,10 @@
 
     <!-- tabs content -->
     <div class="tab-content">
+
+
+
+
 
 
 
@@ -75,7 +98,7 @@
         <!-- compose form -->
         <form>
           <fieldset>
-          
+
             <div class="control-group">
               <label class="control-label">{{ui.message.broadcast}}</label>
               <div  class="btn-group"  
@@ -124,15 +147,115 @@
                         ng-model="message.body"></textarea>
             </div>
 
+
+
+
             <div class="control-group">
-              <label class="control-label">{{ui.message.message}}</label>
-              <textarea rows="7" 
-                        class="span7"
-                        ng-model="message.body"></textarea>
+              <label class="control-label">Scheaduling</label>
+              <div  class="btn-group"  
+                    bs-buttons-checkbox="" 
+                    data-toggle="buttons-checkbox">
+                <button type="button" 
+                        class="btn btn-small" 
+                        ng-model="scheaduler" 
+                        ng-click="scheaduler == !scheaduler"
+                        bs-button=""
+                        ng-hide="app.resources.role > 2">Turn On</button>
+              </div>
             </div>
+
+            <section ng-show="scheaduler" style="margin-top: 15px; padding: 15px; background-color: #f5f5f5; border: 1px solid #e5e5e5;">
+
+              <div class="control-group">
+                <label class="control-label">Scheadule title</label>
+                <input type="text" 
+                      class="span5"
+                      ng-model="scheadule.title"
+                      placeholder="Scheadule title">
+              </div>
+
+
+
+
+              <div class="control-group">
+                <label class="control-label">Scheadules</label>
+
+                <div class="timer" style="float: left; margin-right: 10px;">
+                  <input  name="time-start" 
+                          type="text" 
+                          ng-model="slot.start.time" 
+                          bs-timepicker>
+                  <i class="icon-time" style="margin-top: -3px;"></i>
+                </div>
+
+                <div  class="btn-group"  
+                      bs-buttons-checkbox="" 
+                      data-toggle="buttons-checkbox">
+
+                  <button type="button" 
+                          class="btn" 
+                          ng-model="scheadule.day1" 
+                          ng-click=""
+                          bs-button="">Ma</button>
+
+                  <button type="button" 
+                          class="btn" 
+                          ng-model="scheadule.day2" 
+                          ng-click=""
+                          bs-button="">Di</button>
+
+                  <button type="button" 
+                          class="btn" 
+                          ng-model="scheadule.day3" 
+                          ng-click=""
+                          bs-button="">Wo</button>
+
+                  <button type="button" 
+                          class="btn" 
+                          ng-model="scheadule.day4" 
+                          ng-click=""
+                          bs-button="">Do</button>
+
+                  <button type="button" 
+                          class="btn" 
+                          ng-model="scheadule.day5" 
+                          ng-click=""
+                          bs-button="">Vr</button>
+
+                  <button type="button" 
+                          class="btn" 
+                          ng-model="scheadule.day6" 
+                          ng-click=""
+                          bs-button="">Za</button>
+
+                  <button type="button" 
+                          class="btn" 
+                          ng-model="scheadule.day7" 
+                          ng-click=""
+                          bs-button="">Zo</button>
+
+                </div>
+
+              </div>
+
+
+
+
+
+            </section>
+
+
+
+
+
 
             <div class="form-actions">
               <button type="submit" 
+                      ng-click="send(message, broadcast)" 
+                      ng-show="scheaduler"
+                      class="btn btn-success">Save</button>
+              <button type="submit" 
+                      ng-hide="scheaduler" 
                       ng-click="send(message, broadcast)" 
                       class="btn btn-success">{{ui.message.sendMessage}}</button>
             </div>
@@ -141,6 +264,10 @@
         <!-- end compose form -->
       </div>
       <!-- end composeTab -->
+
+
+
+
 
 
 
@@ -186,6 +313,10 @@
         </form>
       </div>
       <!-- end viewTab -->
+
+
+
+
 
 
 
@@ -285,6 +416,97 @@
 
 
 
+
+
+
+
+      <!-- notificationsTab -->
+      <div class="tab-pane {{(views.notifications==true) && 'active'}}" id="notificationsTab">
+
+        <div class="tab-header">
+          <h3 class="pull-left">Herinneringen</h3>
+
+        </div>
+
+        <hr>
+
+        <p>Notifications listing</p>
+
+        <!-- <p ng-hide="(messages.inbox[page.inbox] | filter:query.inbox).length > 0">{{ui.message.noMessage}}</p> -->
+        
+        <!-- inbox listing -->
+        <!-- <div ng-show="(messages.inbox[page.inbox] | filter:query.inbox).length > 0">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>
+                  <input type="checkbox"
+                          ng-model="selectionMaster.inbox"
+                          ng-click="toggleSelection(messages.inbox[page.inbox], 'inbox', selectionMaster.inbox)">
+                </th>
+                <th></th>
+                <th>{{ui.message.from}}</th>
+                <th>{{ui.message.subject}}</th>
+                <th>{{ui.message.date}}</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="message in messages.inbox[page.inbox] | filter:query.inbox | orderBy:'creationTime':true">
+                <td>
+                  <input type="checkbox"
+                          ng-model="selection.inbox[message.uuid]"
+                          ng-checked="selection.inbox[message.uuid]">
+                </td>
+                <td><span class="label label-warning" ng-show="(message.state=='NEW')">{{ui.message.newMsg}}</span></td>
+                <td>{{message.requester | convertEve | convertUserIdToName}}</td>
+                <td><a ng-click="requestMessage(message.uuid, 'inbox')">{{message.subject}}</a></td>
+                <td>{{message.creationTime | nicelyDate}}</td>
+                <td>
+                  <div class="pull-right">
+                    <button class="btn btn-mini"
+                            ng-click="reply(message)"><i class="icon-share-alt"></i></button>&nbsp;
+                    <button type="submit" 
+                            ng-click="removeMessage(message.uuid)" 
+                            class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i></button>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <button type="button" 
+                  ng-click="removeMessages(selection.inbox)" 
+                  class="btn btn-small btn-danger pull-left">
+                  <i class="icon-trash icon-white"></i> {{ui.message.deleteSelected}}</button>
+
+          <div class="btn-toolbar pull-right" style="margin: 0;">
+            <div class="btn-group">
+              <button class="btn btn-small {{(page.inbox == 0) && 'disabled'}}" ng-click="paginate.before('inbox')">« Vorige</button>
+              <button class="btn btn-small {{(page.inbox + 1 == messages.inbox.length) && 'disabled'}}" ng-click="paginate.next('inbox')">Volgende »</button>
+            </div>
+          </div>
+
+          <br><br>
+
+          <span class="muted pull-right">
+            <small><i>Pagina: {{page.inbox + 1}} of {{messages.inbox.length}}, in totaal: {{messages.inbox | countBox}} </i></small>
+          </span>
+
+        </div> -->
+        <!-- end inbox listing -->
+
+      </div>
+      <!-- end notificationsTab -->
+
+
+
+
+
+
+
+
+
+
       <!-- outboxTab -->
       <div class="tab-pane {{(views.outbox==true) && 'active'}}" id="outboxTab">
 
@@ -368,6 +590,12 @@
 
       </div>
       <!-- end outboxTab -->
+
+
+
+
+
+
 
 
 
@@ -469,6 +697,12 @@
 
 
 
+
+
+
+
+
+
     </div>
     <!-- end tabs content -->
 
@@ -477,3 +711,18 @@
   </div>
 </div>
 <!-- end inboxes -->
+
+
+<br><br>
+<button type="submit" 
+        ng-click="createNotification()" 
+        class="btn btn-success">Create Notification</button>
+<button type="submit" 
+        ng-click="deleteNotification()" 
+        class="btn btn-danger">Delete Notification</button>
+<button type="submit" 
+        ng-click="editNotification()" 
+        class="btn btn-warning">Edit Notification</button>
+<button type="submit" 
+        ng-click="getNotification()" 
+        class="btn">Get Notification</button>
