working directive with input checkboxes

--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -209,3 +209,31 @@ dl {
 // .navbar, #footer, #notification, #mobile-status-bar {
 //   display: none;
 // }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#scheadule-days {
+  list-style: none;
+  li {
+    display: inline;
+    float: left;
+    margin-right: 10px;
+  }
+}
+
