--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -230,10 +230,21 @@ dl {
 
 #scheadule-days {
   list-style: none;
+  display: block;
+  overflow: hidden;
+  margin-top: 10px;
+  margin-left: 15px;
   li {
     display: inline;
     float: left;
-    margin-right: 10px;
+    margin-right: 15px;
+    label {
+      font-weight: normal;
+      font-size: 12px;
+    }
+    input[type=checkbox] {
+      margin-top: -3px;
+    }
   }
 }
 
