--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -140,12 +140,12 @@
                       placeholder="{{ui.message.typeSubject}}">
             </div>
 
-            <div class="control-group">
+            <!-- <div class="control-group">
               <label class="control-label">{{ui.message.message}}</label>
               <textarea rows="7" 
                         class="span7"
                         ng-model="message.body"></textarea>
-            </div>
+            </div> -->
 
 
 
@@ -164,125 +164,23 @@
               </div>
             </div>
 
-            <section ng-show="scheaduler" style="margin-top: 15px; padding: 15px; background-color: #f5f5f5; border: 1px solid #e5e5e5;">
 
+
+            <section ng-show="scheaduler" style="margin-top: 15px; padding: 15px; background-color: #f5f5f5; border: 1px solid #e5e5e5;">
               <div class="control-group">
                 <label class="control-label">Scheadule title</label>
                 <input type="text" 
                       class="span5"
                       ng-model="scheadule.title"
                       placeholder="Scheadule title">
+                
+                <button class="btn btn-success" ng-click="addNewOffset()">Add New</button>
+
               </div>
-
-
-
-              <hr>
-              
               <span ng-repeat="o in offsets">{{o}}<br><br></span>
-
               <scheadule-item ng-repeat="offset in offsets" scheadule="offset"></scheadule-item>
-
-              <!-- {{scheadule}} -->
-
-              <!-- <div class="control-group">
-                <label class="control-label">Scheadules</label>
-
-                <div class="timer" style="float: left; margin-right: 10px;">
-                  <input  name="time-start" 
-                          type="text" 
-                          ng-model="scheadule.time" 
-                          bs-timepicker>
-                  <i class="icon-time" style="margin-top: -3px;"></i>
-                </div> -->
-
-                <!-- <ul id="scheadule-days">
-                  <li>
-                    <label for="monday">
-                      <input type="checkbox" id="monday" ng-model="scheadule.days.mon">&nbsp;Monday
-                    </label>
-                  </li>
-                  <li>
-                    <label for="tuesday">
-                      <input type="checkbox" id="tuesday" ng-model="scheadule.days.tue">&nbsp;Tuesday
-                    </label>
-                  </li>
-                  <li>
-                    <label for="wednesday">
-                      <input type="checkbox" id="wednesday" ng-model="scheadule.days.wed">&nbsp;Wednesday
-                    </label>
-                  </li>
-                  <li>
-                    <label for="thursday">
-                      <input type="checkbox" id="thursday" ng-model="scheadule.days.thu">&nbsp;Thursday
-                    </label>
-                  </li>
-                  <li>
-                    <label for="friday">
-                      <input type="checkbox" id="friday" ng-model="scheadule.days.fri">&nbsp;Friday
-                    </label>
-                  </li>
-                  <li>
-                    <label for="saturday">
-                      <input type="checkbox" id="saturday" ng-model="scheadule.days.sat">&nbsp;Saturday
-                    </label>
-                  </li>
-                  <li>
-                    <label for="sunday">
-                      <input type="checkbox" id="sunday" ng-model="scheadule.days.sun">&nbsp;Sunday
-                    </label>
-                  </li>
-                </ul> -->
-
-                <!-- <div  class="btn-group" 
-                      data-toggle="buttons-radio">
-
-                  <button type="button" 
-                          class="btn {{(scheadule.days.mon) && 'active'}}" 
-                          ng-model="scheadule.days.mon" 
-                          ng-click="scheadule.days.mon == !scheadule.days.mon">Ma</button>
-
-                  <button type="button" 
-                          class="btn {{(scheadule.days.tue) && 'active'}}" 
-                          ng-model="scheadule.days.tue" 
-                          ng-click="scheadule.days.tue == !scheadule.days.tue">Di</button>
-
-                  <button type="button" 
-                          class="btn {{(scheadule.days.wed) && 'active'}}" 
-                          ng-model="scheadule.days.wed" 
-                          ng-click="scheadule.days.wed == !scheadule.days.wed">Wo</button>
-
-                  <button type="button" 
-                          class="btn {{(scheadule.days.thu) && 'active'}}" 
-                          ng-model="scheadule.days.thu" 
-                          ng-click="scheadule.days.thu == !scheadule.days.thu">Do</button>
-
-                  <button type="button" 
-                          class="btn {{(scheadule.days.fri) && 'active'}}" 
-                          ng-model="scheadule.days.fri" 
-                          ng-click="scheadule.days.fri == !scheadule.days.fri">Vr</button>
-
-                  <button type="button" 
-                          class="btn {{(scheadule.days.sat) && 'active'}}" 
-                          ng-model="scheadule.days.sat" 
-                          ng-click="scheadule.days.sat == !scheadule.days.sat">Za</button>
-
-                  <button type="button" 
-                          class="btn {{(scheadule.days.sun) && 'active'}}" 
-                          ng-model="scheadule.days.sun" 
-                          ng-click="scheadule.days.sun == !scheadule.days.sun">Zo</button>
-
-                </div> -->
-
-              <!-- </div> -->
-
-
-
-
-
+              <hr>
             </section>
-
-
-
 
 
 
